--- a/calificacion-service/src/main/resources/application.yml
+++ b/calificacion-service/src/main/resources/application.yml
@@ -1,8 +1,19 @@
 server:
-  port: 8083
+  port: 8084
 
 spring:
   data:
     mongodb:
       uri: mongodb://mongo:mongo@localhost:27017
       database: microservicios
+  application:
+    name: CALIFICACION-SERVICE
+
+eureka:
+  instance:
+    prefer-ip-address: true
+  client:
+    fetch-registry: true
+    register-with-eureka: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
