--- a/hotel-service/src/main/resources/application.yml
+++ b/hotel-service/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8082
+  port: 8095
 
 spring:
   datasource:
@@ -10,3 +10,14 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+  application:
+    name: HOTEL-SERVICE
+
+eureka:
+  instance:
+    prefer-ip-address: true
+  client:
+    fetch-registry: true
+    register-with-eureka: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
