--- a/usuario-service/src/main/resources/application.yml
+++ b/usuario-service/src/main/resources/application.yml
@@ -16,3 +16,14 @@ spring:
         dialect: org.hibernate.dialect.MySQL8Dialect
   application:
     name: usuario-service
+
+
+eureka:
+  instance:
+    prefer-ip-address: true
+  client:
+    fetch-registry: true
+    register-with-eureka: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
+
