--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -14,6 +14,8 @@ spring:
               uri: lb://USUARIO-SERVICE
               predicates:
                 - Path=/usuarios/**
+              filters:
+                - AuthFilter
             - id: HOTEL-SERVICE
               uri: lb://HOTEL-SERVICE
               predicates:
@@ -22,6 +24,10 @@ spring:
               uri: lb://CALIFICACION-SERVICE
               predicates:
                 - Path=/calificaciones/**
+            - id: AUTH-SERVICE
+              uri: lb://AUTH-SERVICE
+              predicates:
+                - Path=/auth/**
 
 eureka:
   instance:
