Server and cliente Eureka

--- a/microservicios-spring-boot/pom.xml
+++ b/microservicios-spring-boot/pom.xml
@@ -21,6 +21,7 @@
         <module>producto-service</module>
         <module>order-service</module>
         <module>inventario-service</module>
+        <module>discovery-server</module>
     </modules>
 
     <properties>
