--- a/microservicios-spring-boot/producto-service/src/main/resources/application.properties
+++ b/microservicios-spring-boot/producto-service/src/main/resources/application.properties
@@ -2,4 +2,7 @@ spring.data.mongodb.uri=mongodb://mongo:mongo@localhost:27017
 spring.data.mongodb.database=producto-service
 spring.application.name=producto-service
 server.port=8087
-
+eureka.instance.prefer-ip-address=true
+eureka.client.fetch-registry=true
+eureka.client.register-with-eureka=true
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
