--- a/microservicios-spring-boot/order-service/src/main/resources/application.properties
+++ b/microservicios-spring-boot/order-service/src/main/resources/application.properties
@@ -7,3 +7,7 @@ spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 
 spring.application.name=order-service
+eureka.instance.prefer-ip-address=true
+eureka.client.fetch-registry=true
+eureka.client.register-with-eureka=true
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
