--- a/microservicios-spring-boot/inventario-service/src/main/resources/application.properties
+++ b/microservicios-spring-boot/inventario-service/src/main/resources/application.properties
@@ -8,4 +8,4 @@ spring.application.name=inventario-service
 eureka.instance.prefer-ip-address=true
 eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.service-url.defaultZone=http://eureka:password@localhost:8761/eureka/
