--- a/microservicios-spring-boot/api-gateway/src/main/resources/application.properties
+++ b/microservicios-spring-boot/api-gateway/src/main/resources/application.properties
@@ -2,37 +2,33 @@ spring.application.name=api-gateway
 logging.level.org.springframework.cloud.gateway.route.RouteDefinitionRouteLocator=INFO
 logging.level.org.springframework.cloud.gateway=TRACE
 logging.level.root=INFO
-
 server.port=8083
-
 eureka.instance.prefer-ip-address=true
 eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
 eureka.client.service-url.defaultZone=http://eureka:password@localhost:8761/eureka/
-
 spring.cloud.gateway.server.webflux.routes[0].id=producto-service
 spring.cloud.gateway.server.webflux.routes[0].uri=lb://producto-service
 spring.cloud.gateway.server.webflux.routes[0].predicates[0]=Path=/api/producto
-
 spring.cloud.gateway.server.webflux.routes[1].id=order-service
 spring.cloud.gateway.server.webflux.routes[1].uri=lb://order-service
 spring.cloud.gateway.server.webflux.routes[1].predicates[0]=Path=/api/order
-
 spring.cloud.gateway.server.webflux.routes[2].id=discovery-server
 spring.cloud.gateway.server.webflux.routes[2].uri=http://localhost:8761
 spring.cloud.gateway.server.webflux.routes[2].predicates[0]=Path=/eureka/web
 spring.cloud.gateway.server.webflux.routes[2].filters=SetPath=/
-
 spring.cloud.gateway.server.webflux.routes[3].id=discovery-server-static
 spring.cloud.gateway.server.webflux.routes[3].uri=http://localhost:8761
 spring.cloud.gateway.server.webflux.routes[3].predicates[0]=Path=/eureka/**
-
-
 spring.cloud.gateway.server.webflux.routes[4].id=inventario-service
 spring.cloud.gateway.server.webflux.routes[4].uri=lb://inventario-service
 spring.cloud.gateway.server.webflux.routes[4].predicates[0]=Path=/api/inventario
-
 #punto de entrada para los clientes
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8081/realms/spring-boot-microservices-realm
-
+management.tracing.enabled=true
+management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
+management.tracing.sampling.probability=1.0
+spring.zipkin.enabled=true
+spring.zipkin.locator.discovery.enabled=true
+logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]
 
