--- a/microservicios-spring-boot/discovery-server/src/main/resources/application.properties
+++ b/microservicios-spring-boot/discovery-server/src/main/resources/application.properties
@@ -6,3 +6,9 @@ server.port=8761
 
 app.eureka.username=eureka
 app.eureka.password=password
+management.tracing.enabled=true
+management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
+management.tracing.sampling.probability=1.0
+spring.zipkin.enabled=true
+spring.zipkin.locator.discovery.enabled=true
+logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]
