--- a/microservicios-spring-boot/producto-service/src/main/resources/application.properties
+++ b/microservicios-spring-boot/producto-service/src/main/resources/application.properties
@@ -7,3 +7,10 @@ eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
 eureka.client.service-url.defaultZone=http://eureka:password@localhost:8761/eureka/
 
+
+management.tracing.enabled=true
+management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
+management.tracing.sampling.probability=1.0
+spring.zipkin.enabled=true
+spring.zipkin.locator.discovery.enabled=true
+logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]
