--- a/microservicios-spring-boot/order-service/src/main/resources/application.properties
+++ b/microservicios-spring-boot/order-service/src/main/resources/application.properties
@@ -53,3 +53,9 @@ management.tracing.sampling.probability=1.0
 spring.zipkin.enabled=true
 spring.zipkin.locator.discovery.enabled=true
 logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]
+
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.template.default-topic=notificationTopic
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+spring.kafka.producer.properties.spring.json.type.mapping=event:com.msvc.order.event.OrderPlacedEvent
