--- a/microservicios-spring-boot/api-gateway/src/main/resources/application.properties
+++ b/microservicios-spring-boot/api-gateway/src/main/resources/application.properties
@@ -32,3 +32,5 @@ spring.zipkin.enabled=true
 spring.zipkin.locator.discovery.enabled=true
 logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]
 
+management.endpoints.web.exposure.include=prometheus
+
