--- a/microservicios-spring-boot/inventario-service/src/main/resources/application.properties
+++ b/microservicios-spring-boot/inventario-service/src/main/resources/application.properties
@@ -17,3 +17,5 @@ management.tracing.sampling.probability=1.0
 spring.zipkin.enabled=true
 spring.zipkin.locator.discovery.enabled=true
 logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]
+
+management.endpoints.web.exposure.include=prometheus
