--- a/microservicios-spring-boot/notification-service/src/main/resources/application.properties
+++ b/microservicios-spring-boot/notification-service/src/main/resources/application.properties
@@ -20,3 +20,5 @@ spring.kafka.consumer.group-id=notificationId
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
 spring.kafka.consumer.properties.spring.json.type.mapping=event:com.servicio.notification.event.OrderPlacedEvent
+
+management.endpoints.web.exposure.include=prometheus
