--- a/microservicios-spring-boot/order-service/src/main/resources/application.properties
+++ b/microservicios-spring-boot/order-service/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-server.port=${PORT:${SERVER_PORT:0}}
+#server.port=${PORT:${SERVER_PORT:0}}
+server.port=8089
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/order_service?allowPublicKeyRetrieval=true&useSSL=false
@@ -59,3 +60,5 @@ spring.kafka.template.default-topic=notificationTopic
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
 spring.kafka.producer.properties.spring.json.type.mapping=event:com.msvc.order.event.OrderPlacedEvent
+
+management.endpoints.web.exposure.include=prometheus
