--- a/microservicios-spring-boot/order-service/src/main/resources/application.properties
+++ b/microservicios-spring-boot/order-service/src/main/resources/application.properties
@@ -61,4 +61,9 @@ spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.Strin
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
 spring.kafka.producer.properties.spring.json.type.mapping=event:com.msvc.order.event.OrderPlacedEvent
 
-management.endpoints.web.exposure.include=prometheus
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
+msvc.queue.name=cola1
