--- a/microservicios-spring-boot/prometheus/prometheus.yml
+++ b/microservicios-spring-boot/prometheus/prometheus.yml
@@ -31,3 +31,10 @@ scrape_configs:
         labels:
           application: 'Notification Service Application'
 
+  - job_name: 'message-service'
+    metrics_path: '/actuator/prometheus'
+    static_configs:
+      - targets: [ 'host.docker.internal:8091' ]
+        labels:
+          application: 'Message Service Application'
+
